--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
     "react-bootstrap": "^2.7.0"
   },
