--- a/my-app/package.json
+++ b/my-app/package.json
@@ -6,15 +6,20 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajax": "^0.0.4",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.1",
     "bootstrap": "^5.2.3",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "jquery": "^3.6.3",
+    "jQuery": "^1.7.4",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.8.3",
+    "mongoose": "^6.8.4",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2",
