--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "bcrypt-nodejs": "^0.0.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "bootstrap": "^5.2.3",
@@ -24,6 +25,6 @@
     "build": "cd client && npm install && npm run build"
   },
   "engines": {
-    "node": "18.x"
+    "node": ">=0.7.0 <18.15.0"
   }
 }
