--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jquery": "^3.6.3",
+    "json-web-token": "^3.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
