--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT=3001
 MONGO_URI=mongodb+srv://BlogCentral:tRiaVb7b7CcDKeBh@blogcentral.lnjh57o.mongodb.net/test
+JWT_SECRET=kfwjserfnewksfjn 
+# JWT_SECRET is a random string
