--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,15 @@
 {
-    "version": 2,
-    "name": "demo",
-    "builds": [
-       { "src": "server.js", "use": "@vercel/node" }
-    ],
-    "routes": [
-       { "src": "/(.*)", "dest": "/server.js" }
-    ]
- }
+  "version": 2,
+  "name": "demo",
+  "builds": [{ "src": "server.js", "use": "@vercel/node" }],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "server.js"
+    },
+    {
+      "src": "/",
+      "dest": "my-app/src/App.js"
+    }
+  ]
+}
