--- a/my-app/package.json
+++ b/my-app/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "react-use-effect": "^0.0.1",
+    "watch": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
